@@ -1,12 +1,15 @@
 package com.example.demo.controller;
 
+import java.util.ArrayList;
 import java.util.Collections;
-
+import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import org.antlr.v4.runtime.misc.TestRig;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -14,16 +17,19 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
-
 import com.example.demo.model.HR;
+import com.example.demo.repository.AdminRepository;
+import com.example.demo.repository.HRRepository;
 import com.example.demo.security.UserDetailService;
 import com.example.demo.service.AdminService;
+import com.example.demo.service.HRService;
 import com.example.demo.webtoken.JwtService;
 import com.example.demo.webtoken.LoginForm;
 
@@ -42,6 +48,10 @@ public class AdminController {
 	private JwtService jwtService;
 	@Autowired
 	private UserDetailService userDetailService;
+	@Autowired
+	private HRRepository hrRepository;
+	@Autowired
+	private HRService hrService;
 
 	@PostMapping("/authenticate")
 	public ResponseEntity<?> authenticateAndGetToken(@RequestBody LoginForm loginForm) {
@@ -59,43 +69,34 @@ public class AdminController {
 			throw new UsernameNotFoundException("Invalid credentials");
 		}
 	}
-	
+
 	@PostMapping(value = "/admin/create-HR", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
 	public ResponseEntity<?> createHR(
-	    @RequestPart("name") String name,
-	    @RequestPart("surname") String surname,
-	    @RequestPart("username") String username,
-	    @RequestPart("password") String password,
-	    @RequestPart("phone")@Nullable String phone,
-	    @RequestPart("image")@Nullable MultipartFile file) throws Exception {
+			@RequestPart("name") String name,
+			@RequestPart("surname") String surname,
+			@RequestPart("username") String username,
+			@RequestPart("password") String password,
+			@RequestPart("phone") @Nullable String phone,
+			@RequestPart("image") @Nullable MultipartFile file) throws Exception {
+		
+		if(hrService.HrExistsByUsername(username)) {
+			return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+					.body(Collections.singletonMap("usernameExistsError", "Username già esistente"));}
 
-	    HR hr = new HR();
-	    hr.setFirstName(name);
-	    hr.setLastName(surname);
-	    hr.setUsername(username);
-	    hr.setPassword(password);
-	    hr.setPhoneNumber(phone);
-	    
-	    if(adminService.HrExistsByUsername(username)) {
-		   return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of("usernameExistsError", "Username già esistente"));
-	    }
-	    
-	    if(adminService.HrExistsByPhoneNumber(phone)) {
-			   return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of("phoneExistsError", "Numero  già esistente"));
-		    }
-	    
-	    if(file != null && !file.isEmpty()) {
-	    	String filePath = adminService.saveImage(file);
-	    	hr.setImagePath(filePath);
-	    }
+		if(hrService.HrExistsByPhoneNumber(phone)) {
+			return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+					.body(Collections.singletonMap("phoneExistsError", "Numero di telefono già esistente"));}
 
-	    if (adminService.registerHR(hr)) {
-	        return ResponseEntity.ok(Collections.singletonMap("redirect", "/home-admin"));
-	    } else{
-	        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Errore nella registrazione dell'HR manager");
-	    }
-	    
+		boolean isRegistered =  hrService.registerHR(name, surname, username, password, phone, file);
+	
+		if (isRegistered) {
+			return ResponseEntity.ok(Collections.singletonMap("redirect", "/home-admin"));
+		} 
+
+		return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+				.body(Collections.singletonMap("error", "Errore nella registrazione dell'HR manager"));
 	}
+
 
 	@PutMapping("/admin/change-password")
 	public ResponseEntity<?> changePassword(@RequestBody Map<String, String> request){
@@ -106,5 +107,6 @@ public class AdminController {
 			return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Errore nel cambio password");
 		}
 	}
-	
+
+
 }
